# expressaopreinpos

./: .gitignore  .project  CMakeLists.txt  README.md
Debug/: expressaopreinpos  makefile
Debug/src/: subdir.mk
Debug/src/core/: subdir.mk
src/: ExpressaoPreInPos.c  define.h
src/core/: Convert.c  Convert.h  FuncoesPilha.c  FuncoesPilha.h  Saidas.c  Saidas.h  ValidaExpressao.c  ValidaExpressao.h
